# smart_ad_put

./: .gitignore  CLAUDE.md  PRD.md  pyproject.toml
.github/workflows/: deploy.yml
analysis_results/: campaign_lifecycle_analysis.py  product_lifecycle_analysis.py
analysis_results/campaign/: REPORT.md
analysis_results/product/: REPORT.md  stats_0301_0307.csv  stats_0315_0321.csv  stats_combined.csv
config/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/pages/Dashboard/: index.vue
frontend/src/pages/Decisions/: index.vue
frontend/src/pages/Strategy/: index.vue
frontend/src/router/: index.ts
src/api/: main.py
src/api/routers/: automation.py  dashboard.py  lifecycle.py  strategy.py
src/core/automation/: commander.py
src/core/lifecycle/: VALIDATION_REPORT.md  detector.py  stages.py
src/core/strategy/: engine.py  models.py
